--- a/lab1-2/index.html
+++ b/lab1-2/index.html
@@ -42,7 +42,7 @@
             </ul>
         </li>
     </ol>
-    <h2>Task 3. Таблица.</h2>>
+    <h2>Task 3. Таблица.</h2>
     <table border="1" width=80%>
 
         <caption>     Таблица с данными об успеваемости 3-х студентов по всем дисциплинам 3-го курса. <br>
